--- a/css/destinations.css
+++ b/css/destinations.css
@@ -1,3 +1,4 @@
+body,
 html {
   box-sizing: border-box;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -10,55 +11,77 @@ html {
 *::after {
   box-sizing: inherit;
 }
-
-.hawaii__banner {
-  position: relative;
+/*Hawaii*/
+.destination__hawaii-container {
+  background-image: url(../assets/images/hawaii.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding-top: 3rem;
+  padding-bottom: 2rem;
 }
 
-.information__container {
-  padding: 4rem 0 0 4rem;
-  background-image: url(../assets/images/Images/hawaii.jpg);
+/*Iceland*/
+.destination__iceland-container {
+  background-image: url(../assets/images/iceland.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
-  max-width: 100%;
-  min-width: 100%;
-  height: 100vh;
+  padding-top: 3rem;
+  padding-bottom: 2rem;
 }
 
-.destination__hawaii {
+/*Greece*/
+.destination__greece-container {
+  background-image: url(../assets/images/greece.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  padding-top: 3rem;
+  padding-bottom: 2rem;
+}
+
+.destination {
+  display: flex;
   color: #fefaf5;
   font-size: xx-large;
-  display: flex;
-  position: relative;
-  justify-content: left;
+  padding: 2rem 0 0 6rem;
 }
 
 .cards__container {
   display: flex;
   justify-content: center;
+  padding-bottom: 5rem;
 }
 
 .card {
+  list-style-type: none;
   background-color: white;
-  position: relative;
   text-align: center;
-  margin: 2rem;
-  padding-right: 1rem;
-  padding-left: 1rem;
-  min-width: 250px;
-  max-width: 280px;
-  min-height: 320px;
-  max-height: 400px;
-  border-radius: 5px;
-  box-shadow: 0 5px 9px -1px rgba(0, 0, 0, 0.25);
+  margin: 32px;
+  padding: 0 16px 60px 16px;
+  min-width: 15.625rem;
+  max-width: 17.5rem;
+  min-height: 20rem;
+  max-height: 25rem;
+  border-radius: 0.3125rem;
+  box-shadow: 0 0.3125rem 0.5625rem -0.0625rem rgba(0, 0, 0, 0.25);
+}
+
+.li + li,
+.day,
+.whats__included {
+  margin-top: 1rem;
 }
 
 .day {
-  border-bottom: 1px solid black;
+  border-bottom: 0.125rem solid black;
+  font-weight: 700;
 }
 
 .whats__included {
   background-color: #fefaf5;
+  padding: 0.9rem 0;
 }
